--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "antd-starter",
+  "name": "addone-show-password",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -34,6 +34,7 @@
     "@hocgin/ui": "^5.0.20",
     "antd": "^5.2.2",
     "classnames": "^2.3.1",
+    "jquery": "^3.6.4",
     "query-string": "^7.0.1",
     "react": "18.x",
     "react-dom": "18.x"
@@ -41,19 +42,20 @@
   "devDependencies": {
     "@hocgin/mock-kit": "^2.0.42",
     "@hocgin/umijs-plugin-browser-addone": "^1.0.93",
+    "@types/jquery": "^3.5.16",
     "@types/mockjs": "^1.0.6",
     "@types/react": "^18.x",
     "@types/react-dom": "^18.x",
     "@umijs/plugin-qiankun": "^2.37.2",
     "@umijs/preset-react": "^1.8.30",
     "@umijs/test": "^3.5.20",
-    "mockjs": "^1.1.0",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "cross-env": "^7.0.3",
     "lint-staged": "^10.0.7",
+    "mockjs": "^1.1.0",
     "prettier": "^2.2.0",
     "typescript": "^4.1.2",
-    "yorkie": "^2.0.0",
-    "umi": "^3.5.20"
+    "umi": "^3.5.20",
+    "yorkie": "^2.0.0"
   }
 }
