--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@hocgin/ui": "^5.0.20",
     "antd": "^5.2.2",
     "classnames": "^2.3.1",
+    "insertion-query": "^1.1.0",
     "jquery": "^3.6.4",
     "query-string": "^7.0.1",
     "react": "18.x",
